--- a/index.html
+++ b/index.html
@@ -28,6 +28,6 @@
     <p>We may update our Privacy Policy from time to time. We will notify you of any changes by posting the new Privacy Policy on this page.</p>
 
     <h2>Contact Us</h2>
-    <p>If you have any questions about this Privacy Policy, please contact us at [あなたの連絡先情報 - GitHubプロフィールのURLなどでもOKです].</p>
+    <p>If you have any questions about this Privacy Policy, please contact us at https://github.com/vpr0555.</p>
 </body>
 </html>
