--- a/index.html
+++ b/index.html
@@ -1,33 +1,51 @@
 <!DOCTYPE html>
-<html lang="ja">
+<html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Privacy Policy - A Magnet Link Copier</title>
+    <title>Privacy Policy for Chrome Extensions</title>
     <style>
-        body { font-family: sans-serif; line-height: 1.6; max-width: 800px; margin: auto; padding: 20px; }
-        h1 { text-align: center; }
+        body { font-family: sans-serif; line-height: 1.6; max-width: 800px; margin: auto; padding: 20px; color: #333; }
+        h1 { text-align: center; border-bottom: 2px solid #eee; padding-bottom: 10px; }
+        h2 { color: #2c3e50; margin-top: 30px; border-left: 5px solid #2c3e50; padding-left: 10px; }
+        .box { background: #f9f9f9; padding: 20px; border-radius: 8px; border: 1px solid #eee; }
+        li { margin-bottom: 10px; }
+        .footer { margin-top: 50px; font-size: 0.9em; color: #777; text-align: center; border-top: 1px solid #eee; padding-top: 20px; }
     </style>
 </head>
 <body>
-    <h1>Privacy Policy for "A Magnet Link Copier"</h1>
-    <p>This Privacy Policy explains how "A Magnet Link Copier" (the "Extension") handles your data.</p>
+    <h1>Privacy Policy for Chrome Extensions</h1>
+    <p>This Privacy Policy applies to the Google Chrome Extensions (the "Extension") developed by this developer that link to this page.</p>
 
-    <h2>Data Collection</h2>
-    <p>The Extension does not collect any personal or identifiable information from its users. The Extension's functionality is to locate magnet links on the current page and copy them to the clipboard. All operations are performed locally on your device and no data is transmitted to an external server.</p>
+    <h2>1. Data Collection and Usage</h2>
+    <div class="box">
+        <p><strong>We take your privacy seriously.</strong></p>
+        <p>The Extension is designed to perform its functions locally on your device. We do not collect, store, or transmit any personal information, browsing history, or identifiable data to any external servers or third parties.</p>
+    </div>
 
-    <h2>Permissions</h2>
-    <p>The Extension requires the following permissions to function:</p>
+    <h2>2. Permissions</h2>
+    <p>The Extension only requests the minimum permissions necessary to provide its features. Depending on the specific extension you are using, it may request one or more of the following permissions:</p>
     <ul>
-        <li><strong>activeTab</strong>: This is required to access the current tab only when the user explicitly clicks the extension icon. This is necessary to find magnet links on the page.</li>
-        <li><strong>scripting</strong>: This is required to inject a script into the active page to find the magnet links and copy them to the clipboard.</li>
+        <li><strong>contextMenus</strong>: To add useful options to the browser's right-click menu.</li>
+        <li><strong>scripting / activeTab</strong>: To interact with the current web page content to perform the extension's core features (e.g., finding text or links).</li>
+        <li><strong>storage</strong>: To save your user preferences and settings locally within your browser.</li>
+        <li><strong>Host Permissions</strong>: To allow the extension to function on the websites you visit, triggered only by user interaction.</li>
+        <li><strong>clipboardWrite</strong>: To copy requested information to your clipboard.</li>
     </ul>
-    <p>These permissions are used solely for the stated purpose of the Extension and do not grant access to any other user data or browsing history.</p>
+    <p>These permissions are used <strong>only</strong> to execute the functionality described in the extension's store page and never for data harvesting or monitoring.</p>
 
-    <h2>Changes to This Privacy Policy</h2>
-    <p>We may update our Privacy Policy from time to time. We will notify you of any changes by posting the new Privacy Policy on this page.</p>
+    <h2>3. Third-Party Services</h2>
+    <p>If an Extension interacts with a third-party service (such as Google Search or a translation engine), your interaction is subject to that provider's privacy policy. We do not receive or store any data from these interactions.</p>
 
-    <h2>Contact Us</h2>
-    <p>If you have any questions about this Privacy Policy, please contact us at https://github.com/vpr0555.</p>
+    <h2>4. Changes to This Policy</h2>
+    <p>This policy may be updated to reflect changes in our extensions or legal requirements. The latest version will always be available on this page.</p>
+
+    <h2>5. Contact & Support</h2>
+    <p>If you have any questions regarding privacy or the Extension, please contact the developer via the support link on the Chrome Web Store or visit:<br>
+    <a href="https://github.com/vpr0555">https://github.com/vpr0555</a></p>
+
+    <div class="footer">
+        Last Updated: January 9, 2026
+    </div>
 </body>
 </html>
